src/objects/NewsFeedTranslation__c.object
<CustomObject>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <picklist>
            <picklistValues>
                <fullName>zh_CN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>fr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ru</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>en_US</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LinkToRecord__c</fullName>
        <label>Link to Record</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>LongDescription__c</fullName>
        <label>Long Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PortalMessage__c</fullName>
        <label>Portal Message</label>
        <referenceTo>PortalMessage__c</referenceTo>
        <relationshipName>NewsFeedTranslations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Portal Message Translation</label>
    <nameField>
        <displayFormat>PMT-{0}</displayFormat>
        <label>Portal Message Translation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Portal Message Translations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>